5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1716_2502.log
== SUBMITION (2019-05-16 15:21:16) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(acr)	
-- EXECUTION TIME:
0.19766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2502/main.py", line 8, in <module>
    acr +=1/(f-1*(3**exp))
NameError: name 'acr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:21:23) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(round(acr,8)	
-- EXECUTION TIME:
0.138946
-- ERROR:
  File "/home/codebench/codes/1716/2502/main.py", line 13
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:26) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(round(acr,8)	
-- ERROR:
File "XXXX", line 13
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:21:32) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.136394
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2502/main.py", line 8, in <module>
    acr +=1/(f-1*(3**exp))
NameError: name 'acr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:33) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(round(acr,8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    acr +=1/(f-1*(3**exp))
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:43) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(round(acr,8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    acr +=1/(f-1*(3**exp))
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:00) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(round(acr,8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    acr +=1/(f-1*(3**exp))
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:10) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(round(acr,8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    acr +=1/(f-1*(3**exp))
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:22:20) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.304393
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
5.52019046
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
5.52016149
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
5.52095476
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:20) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- OUTPUT:
5.52019046
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:29) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- OUTPUT:
5.52019046
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:22:56) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1)*(3**exp)
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.29278
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
15499.67463964
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
891704.85715572
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
833.54936463
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:58) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1)*(3**exp)
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:23:00) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1)*(3**exp)
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:23:02) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1)*(3**exp)
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- OUTPUT:
15499.67463964
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:23:11) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.347495
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95087368
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:23:14) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.26243
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95087246
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:23:14) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:23:14) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.362009
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95087368
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:23:14) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.32038
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95082935
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95087368
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:23:14) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.625493
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087368
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95082935
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:23:14) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
1.07846
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087368
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:

-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:23:17) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.307028
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95087368
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:23:19) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:23:53) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/((f-1)*(3**exp))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.240894
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95087368
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:24:07) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.285277
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:28:01) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr +=1/(f-1*(3**exp))
	exp += 1
	f += 2
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
380.028
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:38) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.195258
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.1415933
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14159266
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:39) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.244346
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.1415933
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14159266
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:39) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.248708
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.14159266
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:

-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:39) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.272597
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.14156872
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.1415933
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14159266
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:39) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.446892
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.14156872
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14156872
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:39) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.804595
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.14159266
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:

-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:39) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.689122
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.14156872
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:

-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:45) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.167009
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:47) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.207302
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:48) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.124975
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:48) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.147813
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:49) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.162566
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:50) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.244488
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:51) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.22427
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:51) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.141795
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:52) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.106397
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:53) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.223073
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:54) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.128669
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:31:54) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.286353
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.14156872
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:

-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:38:44) 
-- CODE:
from math import*
a = int(input())
n = 0
f = 2
exp = 0
sinal = 1
acr = 0
while n < a:
	acr += sinal*(1/((f-1)*(3**exp)))
	exp += 1
	sinal = sinal *(-1)
	f += 2
	n += 1
acr = sqrt(12)*acr
print(round(acr,8))	
-- EXECUTION TIME:
0.152867
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
